tests/integration/errors/empty_tuple.rsg
// TEST: compile_error
// EXPECT-ERROR: empty tuple '()' is not allowed; use 'unit'
module test_err

fn main() {
    x := ()
}
